# react-native-mmkv-storage

./: OAT.xml  README.OpenSource  README.md  package.json
harmony/: mmkv_storage.har
harmony/mmkv_storage/: BuildProfile.ets  index.ets  oh-package.json5
harmony/mmkv_storage/src/main/: module.json5
harmony/mmkv_storage/src/main/cpp/: CMakeLists.txt  MMKVNativePackage.h  MMKVNativeTurboModule.cpp  MMKVNativeTurboModule.h  napi_init.cpp
harmony/mmkv_storage/src/main/cpp/types/libmmkv_storage/: Index.d.ts  oh-package.json5
harmony/mmkv_storage/src/main/ets/: AssetStore.ets  RNMMKVStoragePackage.ets  RNMMKVStorageTurboModule.ets
harmony/mmkv_storage/src/main/resources/base/element/: string.json
harmony/mmkv_storage/src/main/resources/zh_CN/element/: string.json
harmony/mmkv_storage/src/mock/: mock-config.json5
harmony/mmkv_storage/src/ohosTest/: module.json5
